kubernetes/kube-prod-d1/immich/prod-d1/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      # securityContext:
      #   fsGroup: 0
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
        - name: immich-server
          image: "ghcr.io/immich-app/immich-server:release@sha256:2ab6a6273755d9b8a5c4f25dbaa2d097fc4a2cc261b70bc73621e6405cc106fe"
          imagePullPolicy: Always
          #securityContext:
          #  runAsUser: 0
          ports:
            - containerPort: 3001
          livenessProbe:
            failureThreshold: 120
            httpGet:
              path: /server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 120
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 120
            httpGet:
              path: /server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 120
            timeoutSeconds: 1
          volumeMounts:
            - name: library-nfs
              mountPath: /usr/src/app/upload
      volumes:
        - name: library-nfs
          nfs:
            server: 10.15.21.5
            path: /mnt/user/images/immich/
